# gridtokenx-trading-api

./: .dockerignore  .env.example  .gitignore  BLOCKCHAIN_DATABASE.md  Cargo.toml  DATABASE_ANALYSIS.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  POSTGRESQL_SETUP.md  README.md  REVERSE_PROXY_GUIDE.md  api_demo.html  clean_project.sh  deploy.sh  deploy_local_docker.sh  docker-compose.yml  run_tests.sh  setup_postgres.sh  show_scripts.sh  test_api.sh  test_cancel_fix.sh  test_postgres.sh  validate_project.sh
examples/: simple_client.rs
haproxy/: haproxy.cfg
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  service.yaml
migrations/: 20250710000001_initial_schema.sql  20250710000002_postgresql_schema.sql
nginx/: nginx.conf
src/: auth.rs  auth_handlers.rs  database.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs  server_new.rs
traefik/: docker-compose.yml
