[package]
name = "energy-trading-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"



[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[dependencies]
# Web server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Crypto
sha2 = "0.10"

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"
thiserror = "1.0"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }



[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
