[package]
name = "energy-trading-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"



[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[dependencies]
# HTTP Server - ntex
ntex = { version = "2.15.0", features = ["tokio", "rustls"] }
ntex-files = "2.1.0"
ntex-cors = "2.1.0"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "time", "json", "migrate", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.1"
argon2 = "0.5"
bcrypt = "0.17.0"
rand = "0.9.1"

# Utility
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
dotenv = "0.15"
futures = "0.3"
base64 = "0.22"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
